// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddToCart /> component its snapshot matches story Default 1`] = `
.c5 {
  font-size: 105%;
  font-weight: 700;
  line-height: 0;
  white-space: nowrap;
}

.c5 svg {
  max-height: 100%;
}

.c1 {
  background-color: #f4f4f4;
}

.c0 {
  margin: 2.5rem 0;
}

.c3 {
  margin-right: 0.75rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1.5rem 1.5rem;
}

@media (max-width:672px) {
  .c3 {
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    padding-bottom: 1rem;
  }
}

@media (max-width:672px) {
  .c4 {
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media (max-width:672px) {
  .c2 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="cds--layer-two c2"
      >
        <div
          class="c3"
        >
          <div
            class="cds--form-item"
          >
            <div
              class="cds--number cds--number--helpertext cds--number--nolabel"
            >
              <div
                class="cds--number__input-wrapper"
              >
                <input
                  aria-label="Numeric input field with increment and decrement buttons"
                  id="quantity"
                  min="1"
                  name="quantity"
                  pattern="[0-9]*"
                  step="1"
                  type="number"
                  value="1"
                />
                <div
                  class="cds--number__controls"
                >
                  <button
                    aria-label="Decrement number"
                    class="cds--number__control-btn down-icon"
                    tabindex="-1"
                    title="Decrement number"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="down-icon"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8 15H24V17H8z"
                      />
                    </svg>
                  </button>
                  <div
                    class="cds--number__rule-divider"
                  />
                  <button
                    aria-label="Increment number"
                    class="cds--number__control-btn up-icon"
                    tabindex="-1"
                    title="Increment number"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="up-icon"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                      />
                    </svg>
                  </button>
                  <div
                    class="cds--number__rule-divider"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c4"
        >
          <button
            class="c5 cds--btn cds--btn--md cds--btn--primary"
            tabindex="0"
            type="button"
          >
            Add to cart
             
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AddToCart /> component its snapshot matches story Disabled 1`] = `
.c5 {
  font-size: 105%;
  font-weight: 700;
  line-height: 0;
  white-space: nowrap;
}

.c5 svg {
  max-height: 100%;
}

.c1 {
  background-color: #f4f4f4;
}

.c0 {
  margin: 2.5rem 0;
}

.c3 {
  margin-right: 0.75rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1.5rem 1.5rem;
}

@media (max-width:672px) {
  .c3 {
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    padding-bottom: 1rem;
  }
}

@media (max-width:672px) {
  .c4 {
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media (max-width:672px) {
  .c2 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="cds--layer-two c2"
      >
        <div
          class="c3"
        >
          <div
            class="cds--form-item"
          >
            <div
              class="cds--number cds--number--helpertext cds--number--nolabel"
            >
              <div
                class="cds--number__input-wrapper"
              >
                <input
                  aria-label="Numeric input field with increment and decrement buttons"
                  id="quantity"
                  min="1"
                  name="quantity"
                  pattern="[0-9]*"
                  step="1"
                  type="number"
                  value="1"
                />
                <div
                  class="cds--number__controls"
                >
                  <button
                    aria-label="Decrement number"
                    class="cds--number__control-btn down-icon"
                    tabindex="-1"
                    title="Decrement number"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="down-icon"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8 15H24V17H8z"
                      />
                    </svg>
                  </button>
                  <div
                    class="cds--number__rule-divider"
                  />
                  <button
                    aria-label="Increment number"
                    class="cds--number__control-btn up-icon"
                    tabindex="-1"
                    title="Increment number"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="up-icon"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                      />
                    </svg>
                  </button>
                  <div
                    class="cds--number__rule-divider"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c4"
        >
          <button
            class="c5 cds--btn cds--btn--md cds--btn--primary cds--btn--disabled"
            disabled=""
            tabindex="0"
            type="button"
          >
            Add to cart
             
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
